# winrandr

./: .coverage  .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml  test.yml
discuss/: technical-design.md
docs/: CHANGELOG.md  architecture.md  release-process.md  usage.md  xrandr-reference.md
scripts/: WinRandr.psm1  _common.sh  build.sh  clean.sh  completions.bash  completions.ps1  lint.sh  run.sh  setup.sh  test.sh
scripts/completions/: completions.bash  completions.ps1
scripts/dev/: lint.sh  run.sh  setup.sh  test.sh
scripts/release/: bump-version.sh  publish.sh
tests/: conftest.py  test_cli.py  test_cli_handlers.py  test_constants.py  test_edid.py  test_formatter.py  test_models.py  test_parser.py
tests/features/: test_gamma.py  test_layout.py  test_resolution.py
tests/integration/: test_api.py  test_api_displays.py  test_api_position.py  test_api_props.py  test_cli_main.py  test_cli_main_edge.py  test_cli_main_global.py  test_cli_main_misc.py  test_cli_main_profiles.py  test_edid.py  test_models.py
tests/integration/cli/: test_cli_main.py  test_cli_main_edge.py  test_cli_main_global.py  test_cli_main_misc.py  test_cli_main_mock.py  test_cli_main_profiles.py
tests/unit/: test_cli.py  test_cli_handlers.py  test_cli_handlers_advanced.py  test_formatter.py  test_parser.py  test_profiles.py  test_win32_utils.py
tests/unit/cli/: test_cli.py  test_cli_handlers.py  test_cli_handlers_advanced.py  test_cli_handlers_misc.py
tests/unit/formatter/: test_formatter.py  test_formatter_edge.py
tests/unit/profiles/: conftest.py  helpers.py  test_profiles.py  test_profiles_advanced.py  test_profiles_extra.py
tests/unit/win32/: test_connector_type.py  test_filter_valid_paths.py  test_win32_utils_cfg.py
winrandr/: __init__.py  __main__.py  api.py  bindings.py  cli.py  constants.py  edid.py  formatter.py  models.py  profiles.py  py.typed  structures.py
winrandr/cli/: __init__.py  common.py  handlers.py  parser.py
winrandr/features/: __init__.py  gamma.py  layout.py  resolution.py
winrandr/win32/: __init__.py  bindings.py  constants.py  repair.py  structures.py  utils.py
