[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "winrandr"
version = "0.6.0"
description = "xrandr-like display configuration tool for Windows"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "winrandr contributors"},
]
keywords = ["display", "xrandr", "windows", "monitor", "multi-monitor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Desktop Environment :: Hardware Support",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/SMWHff/winrandr"
Source = "https://github.com/SMWHff/winrandr"
BugTracker = "https://github.com/SMWHff/winrandr/issues"

[project.scripts]
winrandr = "winrandr.cli:main"

[dependency-groups]
dev = [
    "nuitka>=2.6",
    "pytest>=8.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["winrandr"]
branch = true

[tool.coverage.report]
fail_under = 95

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ANN", "BLE", "RUF", "TRY", "C90"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "RUF001", "RUF002", "RUF003"]
"winrandr/**" = ["RUF001", "RUF002", "RUF003"]
"winrandr/win32/structures.py" = ["RUF012", "N801"]

[tool.nuitka]
onefile = true
output-dir = "dist"
company-name = "winrandr"
product-name = "winrandr"
file-version = "0.6.0"

[tool.setuptools.packages.find]
include = ["winrandr*"]
